<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:padding="@dimen/paddingRV"
    >
    <TextView
        android:id="@+id/tituloLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/retirarVehiculo"
        android:textColor="@color/Black"
        android:textSize="@dimen/tituloRetirarV"
        android:textStyle="bold" />
    <TextView
        android:layout_width="@dimen/widthRegistroVehiculo"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopRV"
        android:gravity="center_vertical"
        android:text="@string/fecha2"
        android:textColor="@color/SteelBlue"
        android:textSize="@dimen/textoRV"
        android:textStyle="bold"
        android:fontFamily="serif"
        />
    <TextView
        android:id="@+id/textoFechaEscogidaSalida"
        android:layout_width="@dimen/widthRegistroVehiculo"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopRV2"
        android:gravity="center_vertical"
        android:background="@color/White"
        android:textColor="@color/Black"
        android:textSize="@dimen/textoRV"
        android:fontFamily="serif"
        />
    <TextView
        android:layout_width="@dimen/widthRegistroVehiculo"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopRV2"
        android:gravity="center_vertical"
        android:text="@string/hora"
        android:textColor="@color/SteelBlue"
        android:textSize="@dimen/textoRV"
        android:textStyle="bold"
        android:fontFamily="serif"
        />
    <TextView
        android:layout_width="@dimen/widthRegistroVehiculo"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/horaDescripcion"
        android:textColor="@color/SteelBlue"
        android:textSize="@dimen/textoRV2"
        android:textStyle="bold"
        android:fontFamily="serif"
        />

    <EditText
        android:id="@+id/editTextHoraSalida"
        android:layout_width="@dimen/widthRegistroVehiculo"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:hint="@string/hintHora"
        android:maxLength="4"
        android:inputType="numberDecimal"
        android:textColor="@color/Black"
        android:fontFamily="serif"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopRV"
        >
        <Button
            android:id="@+id/cancelFechaSalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/SteelBlue"
            android:textColor="@color/White"
            android:layout_marginEnd="@dimen/marginTopRV2"
            android:text="@string/cancelar"
            android:padding="@dimen/paddingRV"
            />
        <Button
            android:id="@+id/okFechaSalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/SteelBlue"
            android:textColor="@color/White"
            android:text="@string/retirarVehiculo"
            android:padding="@dimen/paddingRV"
            />

    </LinearLayout>
</LinearLayout>